[gd_scene load_steps=15 format=3 uid="uid://cxeijgsmqxr5s"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_1kw6n"]
[ext_resource type="Script" path="res://Player/camera_joint.gd" id="2_kypek"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_u1fyy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_i72ff"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_putqt"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_2reyu"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="7_wcfuw"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://DustTest/dust.res" id="11_8m8p3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_74g7w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ouo5f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rkrj8"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_mdhr0"]
material = SubResource("StandardMaterial3D_rkrj8")

[sub_resource type="SphereMesh" id="SphereMesh_5n68b"]

[sub_resource type="Curve" id="Curve_af5np"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.247813, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_1kw6n")
WalkSpeed = 15.0
Accel = 200.0
Decla = 200.0
JumpForce = 25.0
JumpGravity = 70.0
JumpApexMax = null
JumpApexGravity = null
FallGravity = null
MaxFallSpeed = null
JumpStopMult = 0.5
RotationSpeed = null
JumpBufferTime = null
JumpCoyoteTime = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_74g7w")

[node name="PlayerModle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ouo5f")
skeleton = NodePath("../CollisionShape3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerModle"]
transform = Transform3D(0.227033, 0, 0, 0, 0.227033, 0, 0, 0, 0.227033, 0.187531, 0.528621, -0.434562)
mesh = SubResource("SphereMesh_mdhr0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="PlayerModle"]
transform = Transform3D(0.227033, 0, 0, 0, 0.227033, 0, 0, 0, 0.227033, -0.19433, 0.528621, -0.434562)
mesh = SubResource("SphereMesh_mdhr0")

[node name="CameraHeight" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="CameraJoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("2_kypek")
Mouse_Sensitivity = 0.2

[node name="SpringArm3D" type="SpringArm3D" parent="CameraJoint"]
spring_length = 7.0
margin = 0.02

[node name="Camera3D" type="Camera3D" parent="CameraJoint/SpringArm3D"]
cull_mask = 983039

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="JumpCoyote" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="StateManger" type="Node" parent="."]
script = ExtResource("3_u1fyy")

[node name="PlayerMovementState" type="Node" parent="StateManger"]
script = ExtResource("4_i72ff")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateManger/PlayerMovementState"]
script = ExtResource("5_putqt")

[node name="ToWalking" type="Node" parent="StateManger/PlayerMovementState/IdleState"]
script = ExtResource("6_2reyu")
to = NodePath("../../WalkingState")
event = &"StartMoving"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateManger/PlayerMovementState/IdleState"]
script = ExtResource("6_2reyu")
to = NodePath("../../JumpState")
event = &"StartJumping"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateManger/PlayerMovementState/IdleState"]
script = ExtResource("6_2reyu")
to = NodePath("../../FallingState")
event = &"StartFalling"
delay_in_seconds = "0.0"

[node name="WalkingState" type="Node" parent="StateManger/PlayerMovementState"]
script = ExtResource("5_putqt")

[node name="ToIdle" type="Node" parent="StateManger/PlayerMovementState/WalkingState"]
script = ExtResource("6_2reyu")
to = NodePath("../../IdleState")
event = &"StopMoving"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateManger/PlayerMovementState/WalkingState"]
script = ExtResource("6_2reyu")
to = NodePath("../../JumpState")
event = &"StartJumping"
delay_in_seconds = "0.0"

[node name="ToFall" type="Node" parent="StateManger/PlayerMovementState/WalkingState"]
script = ExtResource("6_2reyu")
to = NodePath("../../FallingState")
event = &"StartFalling"
delay_in_seconds = "0.0"

[node name="JumpState" type="Node" parent="StateManger/PlayerMovementState"]
script = ExtResource("5_putqt")

[node name="ToIdle" type="Node" parent="StateManger/PlayerMovementState/JumpState"]
script = ExtResource("6_2reyu")
to = NodePath("../../IdleState")
event = &"IsGrounded"
delay_in_seconds = "0.0"

[node name="ToFalling" type="Node" parent="StateManger/PlayerMovementState/JumpState"]
script = ExtResource("6_2reyu")
to = NodePath("../../FallingState")
event = &"StartFalling"
delay_in_seconds = "0.0"

[node name="FallingState" type="Node" parent="StateManger/PlayerMovementState"]
script = ExtResource("5_putqt")

[node name="ToIdle" type="Node" parent="StateManger/PlayerMovementState/FallingState"]
script = ExtResource("6_2reyu")
to = NodePath("../../IdleState")
event = &"IsGrounded"
delay_in_seconds = "0.0"

[node name="ToJumping" type="Node" parent="StateManger/PlayerMovementState/FallingState"]
script = ExtResource("6_2reyu")
to = NodePath("../../JumpState")
event = &"StartJunping"
delay_in_seconds = "0.0"

[node name="Debug" type="CanvasLayer" parent="."]

[node name="StateChartDebugger" parent="Debug" instance=ExtResource("7_wcfuw")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -362.0
offset_bottom = 286.0
grow_horizontal = 0
grow_vertical = 1
initial_node_to_watch = NodePath("../../StateManger")

[node name="GrassInteract" type="MeshInstance3D" parent="."]
transform = Transform3D(0.986852, 0, 0, 0, 0.986852, 0, 0, 0, 0.986852, 0, 0.481205, 0)
layers = 65536
mesh = SubResource("SphereMesh_5n68b")

[node name="MovingParticles" type="CPUParticles3D" parent="."]
transform = Transform3D(2.24883, 0, 0, 0, 2.24883, 0, 0, 0, 2.24883, 0, 0, 0)
amount = 60
mesh = ExtResource("11_8m8p3")
emission_shape = 1
emission_sphere_radius = 0.1
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_af5np")

[connection signal="timeout" from="Timers/JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="Timers/JumpCoyote" to="." method="_on_jump_coyote_timeout"]
[connection signal="state_physics_processing" from="StateManger/PlayerMovementState/IdleState" to="." method="_on_idle_state_state_physics_processing"]
[connection signal="state_physics_processing" from="StateManger/PlayerMovementState/WalkingState" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="StateManger/PlayerMovementState/JumpState" to="." method="_on_jump_state_state_entered"]
[connection signal="state_physics_processing" from="StateManger/PlayerMovementState/JumpState" to="." method="_on_jump_state_state_physics_processing"]
[connection signal="state_physics_processing" from="StateManger/PlayerMovementState/FallingState" to="." method="_on_falling_state_state_physics_processing"]
